@@ -22,6 +22,9 @@ Internal Supply Module | view
 Internal Supply | view
 Internal Supply | view_profile
 Measure | view
+Organisation | jump_to_internal_supply
+Organisation | jump_to_purchase_supply
+Organisation | jump_to_sale_supply
 Product Individual Variation | view
 Product Module | converted_inventory_report
 Product Module | transformed_inventory_report
